--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -9,13 +9,15 @@
     - name: 创建公共负载均衡器 - 门户
       href: quickstart-load-balancer-standard-public-portal.md
     - name: 创建公共负载均衡器 - PowerShell
-      href: quickstart-create-standard-load-balancer-powershell.md
+      href: quickstart-load-balancer-standard-public-powershell.md
     - name: 创建公共负载均衡器 - Azure CLI
       href: quickstart-load-balancer-standard-public-cli.md
     - name: 创建公共负载均衡器 - ARM 模板
       href: quickstart-load-balancer-standard-public-template.md
     - name: 创建内部负载均衡器 - 门户
       href: quickstart-load-balancer-standard-internal-portal.md
+    - name: 创建内部负载均衡器 - PowerShell
+      href: quickstart-load-balancer-standard-internal-powershell.md
     - name: 创建内部负载均衡器 - Azure CLI
       href: quickstart-load-balancer-standard-internal-cli.md
   expanded: true
