commit translated contents

--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -10,13 +10,14 @@ metadata:
   author: nitinme
   ms.author: nitinme
   manager: nitinme
-  ms.date: 03/24/2020
-  ms.openlocfilehash: 938d54981a8605b28f745c1ae3d6722a644c0320
-  ms.sourcegitcommit: 927dd0e3d44d48b413b446384214f4661f33db04
+  ms.custom: custom-portals-hub
+  ms.date: 08/28/2020
+  ms.openlocfilehash: fac52ac6cc7018d2ddcaedd663abf26275f4929e
+  ms.sourcegitcommit: 656c0c38cf550327a9ee10cc936029378bc7b5a2
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/26/2020
-  ms.locfileid: "88869909"
+  ms.lasthandoff: 08/28/2020
+  ms.locfileid: "89074689"
 highlightedContent:
   items:
   - title: 什么是认知服务？
@@ -28,19 +29,19 @@ highlightedContent:
   - title: 认知服务和机器学习
     itemType: concept
     url: ./cognitive-services-and-machine-learning.md
-  - title: 认知服务中的语言支持
+  - title: 语言支持
     itemType: reference
     url: ./language-support.md
-  - title: 创建认知服务资源
+  - title: 创建资源
     itemType: how-to-guide
     url: ./cognitive-services-apis-create-account.md
-  - title: 在容器中使用认知服务
+  - title: 在容器中使用
     itemType: concept
     url: ./cognitive-services-container-support.md
-  - title: 用于认知服务的虚拟网络
+  - title: 虚拟网络
     itemType: architecture
     url: cognitive-services-virtual-networks.md
-  - title: 认知服务的安全性
+  - title: 安全性
     itemType: concept
     url: cognitive-services-security.md
 conceptualContent:
@@ -62,7 +63,7 @@ conceptualContent:
       text: 表单识别器
     - url: ./ink-recognizer/index.yml
       itemType: overview
-      text: 墨迹识别器（预览版）
+      text: 墨迹识别器（将停用）
     - url: ../media-services/video-indexer/index.yml
       itemType: overview
       text: 视频索引器
@@ -90,6 +91,9 @@ conceptualContent:
     - url: ./speech-service/index.yml
       itemType: overview
       text: 语音服务
+    - url: https://speech.microsoft.com/
+      itemType: overview
+      text: " - 通过 Speech Studio 自定义"
   - title: 决策
     summary: 构建应用，用于呈现有助于做出明智和高效决策的建议。
     links:
@@ -129,38 +133,41 @@ conceptualContent:
     - url: ./containers/container-faq.md
       itemType: reference
       text: 认知服务容器常见问题解答
-tools:
-  title: 软件开发工具包 (SDK)
-  summary: 以偏好的编程语言开始使用认知服务 SDK。
-  items:
-  - title: C#
-    imageSrc: https://docs.microsoft.com/media/logos/logo_Csharp.svg
-    url: https://docs.microsoft.com/dotnet/api/overview/azure/cognitiveservices/client?view=azure-dotnet
-  - title: Go
-    imageSrc: https://docs.microsoft.com/media/logos/logo_Go-lightblue.svg
-    url: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/cognitiveservices
-  - title: Java
-    imageSrc: https://docs.microsoft.com/media/logos/logo_java.svg
-    url: https://docs.microsoft.com/java/api/overview/azure/cognitiveservices/client?view=azure-java-stable
-  - title: JavaScript
-    imageSrc: https://docs.microsoft.com/media/logos/logo_js.svg
-    url: https://docs.microsoft.com/javascript/api/overview/azure/cognitive-services?view=azure-node-latest
-  - title: Python
-    imageSrc: https://docs.microsoft.com/media/logos/logo_python.svg
-    url: https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python
-  - title: R
-    imageSrc: https://docs.microsoft.com/media/logos/logo_R.svg
-    url: https://github.com/Azure/AzureCognitive
 additionalContent:
   sections:
-  - items:
-    - title: 其他资源
+  - title: 其他资源
+    items:
+    - title: 用于自定义的门户
+      links:
+      - text: 自定义翻译
+        url: https://portal.customtranslator.azure.ai/
+      - text: 自定义视觉
+        url: https://www.customvision.ai/
+      - text: 语言理解 (LUIS)
+        url: https://luis.ai
+      - text: QnA Maker
+        url: https://www.qnamaker.ai/
+      - text: Speech Studio
+        url: https://speech.microsoft.com/
+    - title: SDK 和 REST API
+      links:
+      - text: C#
+        url: https://docs.microsoft.com/dotnet/api/overview/azure/cognitiveservices/client?view=azure-dotnet
+      - text: Go
+        url: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/cognitiveservices
+      - text: Java
+        url: https://docs.microsoft.com/java/api/overview/azure/cognitiveservices/client?view=azure-java-stable
+      - text: JavaScript
+        url: https://docs.microsoft.com/javascript/api/overview/azure/cognitive-services?view=azure-node-latest
+      - text: Python
+        url: https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python
+      - text: R
+        url: https://github.com/Azure/AzureCognitive
+      - text: 认知服务管理 REST API
+        url: https://docs.microsoft.com/rest/api/cognitiveservices/
+    - title: 工具
       links:
       - text: Azure CLI
         url: https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest
       - text: PowerShell
         url: https://docs.microsoft.com/powershell/module/az.cognitiveservices/?view=azps-2.5.0#cognitive_services
-    - title: REST API
-      links:
-      - text: 认知服务管理
-        url: https://docs.microsoft.com/rest/api/cognitiveservices/
