commit translated contents

--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -94,9 +94,11 @@
           href: cache-how-to-manage-redis-cache-powershell.md
         - name: 使用 Azure CLI 进行部署和管理
           href: cli-samples.md
-        - name: 预配用于 Redis 的 Azure 缓存
+        - name: 创建 Redis 缓存 - ARM 模板
+          displayName: Resource Manager
           href: cache-redis-cache-arm-provision.md
-        - name: 利用用于 Redis 的 Azure 缓存预配 Web 应用
+        - name: 创建带 Redis 缓存的 Web 应用 - ARM 模板
+          displayName: Resource Manager
           href: cache-web-app-arm-with-redis-cache-provision.md
     - name: 管理
       items:
