--- a/articles/dns/index.yml
+++ b/articles/dns/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: rohinkoul
   ms.author: rohink
   ms.date: 09/20/2019
-  ms.openlocfilehash: ff3ff696e6ffcfc99f84dd4b821c88c4b616f671
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 40a502efb457ba9ac5497ca6fd6f241b40cca94e
+  ms.sourcegitcommit: 656c0c38cf550327a9ee10cc936029378bc7b5a2
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "76935399"
+  ms.lasthandoff: 08/28/2020
+  ms.locfileid: "89077647"
 landingContent:
 - title: 了解 Azure DNS
   linkLists:
@@ -33,6 +33,8 @@ landingContent:
     links:
     - text: 在 Azure DNS 中托管域
       url: dns-delegate-domain-azure-dns.md
+    - text: 创建子 DNS 区域
+      url: tutorial-public-dns-zones-child.md
 - title: 部署专用 DNS 区域
   linkLists:
   - linkListType: overview
