--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -1,6 +1,7 @@
 - name: Azure Data Share 文档
   href: index.yml
 - name: 概述
+  expanded: true
   items:
     - name: 什么是 Azure Data Share？
       href: overview.md
@@ -36,6 +37,11 @@
       href: samples-powershell.md
 - name: 操作指南
   items:
+    - name: 通过源共享和接收数据
+      items:
+        - name: 从 Azure 数据资源管理器进行共享
+          href: /azure/data-explorer/data-share
+          maintainContext: true
     - name: 监视
       href: how-to-monitor.md
     - name: 疑难解答
@@ -54,9 +60,6 @@
       href: security.md
     - name: 灾难恢复
       href: disaster-recovery.md
-    - name: 共享 Azure 数据资源管理器数据
-      href: /azure/data-explorer/data-share
-      maintainContext: true
 - name: 参考
   items:
     - name: .NET
