--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -94,6 +94,8 @@
       href: configure-automatic-updates.md
     - name: 安装语言包
       href: language-packs.md
+    - name: 解决建议
+      href: azure-advisor-recommendations.md
 - name: 概念
   items:
     - name: 身份验证
