--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -82,11 +82,11 @@
 - name: 参考
   items:
     - name: Azure CLI
-      href: /cli/azure/managedservices?view=azure-cli-latest
+      href: /cli/azure/managedservices
     - name: Azure PowerShell
-      href: /powershell/module/az.managedservices/?view=azps-2.4.0#managed_services
+      href: /powershell/module/az.managedservices#managed_services
     - name: 用于 .NET 的 Azure SDK
-      href: /dotnet/api/Microsoft.Azure.Management.ManagedServices?view=azure-dotnet
+      href: /dotnet/api/Microsoft.Azure.Management.ManagedServices
     - name: 用于 .NET 的 Azure SDK (NuGet)
       href: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ManagedServices/'
     - name: 用于 Python 的 Azure SDK
@@ -103,5 +103,5 @@
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: UserVoice
+    - name: 产品反馈
       href: 'https://feedback.azure.com/forums/922753'
